src/styles/footer.css
/* Footer css */

.footer {
  background-color: var(--color-jet);

  display: flex;
  justify-content: space-between;
  gap: 8px;
  padding: 10px;
  position: relative;
}

.selected {
  color: white;
}

.last-repo-sync {
  display: flex;
  justify-content: center;
  align-items: center;
  color: var(--color-blue);
}

.grid-popup-wrapper,
.alphabet-popup-wrapper {
  position: absolute;
  background-color: var(--color-gray);
  margin: 4px;
  right: 0;
  bottom: var(--footer-height);
  border: 1px solid var(--color-jet);
  border-radius: 8px;
  color: var(--color-jet);
}

.grid-popup-wrapper {
  bottom: calc(
    var(--footer-height) + 105px
  ); /* Some extra space for alpha popup*/
}

.drag-area {
  border-radius: inherit;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  border: 1px solid var(--color-gray);
  border-bottom-width: 2px;
  height: 20px;
  background-color: var(--color-jet);
  position: relative;
}

.grid-popup {
  padding: 8px;
  cursor: default;
}

.drag-area .hide-btn {
  color: white;
  position: absolute;
  top: 4px;
  right: 4px;
}

.drag-area .hide-btn:hover {
  color: var(--color-red);
  cursor: pointer;
}

.alphabet-popup {
  display: grid;
  padding: 12px;
  grid-template-columns: repeat(10, 4ch);
  font-size: 1.25em;
}

.grid-wrapper {
  position: relative;
}

.grid-popup .grid-container {
  width: fit-content;
  display: flex;
  flex-direction: column;
  justify-self: center;
  position: relative;
  margin: 20px;
  margin-top: 40px;
}

.add-row-btn:hover path,
.add-col-btn:hover path,
.remove-row-btn:hover path,
.remove-col-btn:hover path {
  stroke: var(--color-jet);
}

.grid-popup .grid-row {
  display: flex;
  align-items: center;
  justify-content: center;
  justify-self: center;
  padding: 1px;
  gap: 2px;
  background-color: var(--color-gray);
}

.grid-popup .grid-cell {
  width: 40px;
  height: 40px;
  padding: 4px;
  background-color: white;
  border: 1px solid var(--color-jet);
  display: grid;
  place-items: center;
  text-align: center;
  overflow: scroll;
  scrollbar-width: none;
  word-break: break-all;
  font-family: "NotoSansMono", "sans-serif";
  line-height: 1em;
  caret-color: transparent;
  cursor: pointer;
}

.grid-cell.index {
  background-color: var(--color-gray);
}

.color-cell-group {
  display: flex;
  flex-wrap: wrap;
  width: 165px;
  gap: 1px;
  place-items: center;
}

.grid-popup .color-cell-btns {
  display: flex;
  justify-content: end;
  gap: 10px;
  position: relative;
  width: 100%;
}

.grid-popup .color-cell {
  width: 40px;
  height: 40px;
  cursor: pointer;
  border: 1px solid var(--color-jet);
  display: grid;
  place-items: center;
  color: black;
  &.clr-blue {
    background-color: rgb(0, 0, 255);
  }
  &.clr-red {
    background-color: rgb(255, 0, 0);
  }
  &.clr-green {
    background-color: rgb(0, 128, 0);
  }
  &.clr-yellow {
    background-color: rgb(255, 255, 0);
  }
  &.clr-magenta {
    background-color: rgb(255, 0, 255);
  }
  &.clr-orange {
    background-color: rgb(255, 165, 0);
  }
  &.clr-cyan {
    background-color: rgb(0, 255, 255);
  }
  &.clr-white {
    background-color: rgb(255, 255, 255);
  }
  &.clr-black {
    background-color: rgb(0, 0, 0);
    color: white;
  }
  &.clr-gray {
    background-color: rgb(128, 128, 128);
  }
  &.clr-purple {
    background-color: rgb(128, 0, 128);
  }
}

.color-tip {
  position: absolute;
  top: 1em;
  left: 0;
  font-size: 0.5em;
  vertical-align: bottom;
}

.grid-popup .inputs-wrapper {
  display: flex;
  gap: 8px;
  justify-content: flex-end;
}

.grid-popup .color-inputs {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  position: relative;
}

.grid-popup .color-inputs input[type="color"] {
  padding: 0;
  height: 40px;
  width: 40px;
}

.grid-popup .btn-group {
  display: flex;
  flex-direction: column;
  width: 200px;
}

.grid-popup .inputs {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  gap: 6px;
  font-size: 1.5em;
}

.grid-popup .inputs input {
  max-width: 5ch;
  padding: 4px;
  font-size: inherit;
}
.grid-popup .inputs input[type="checkbox"] {
  width: 20px;
}

.single-digit {
  padding-left: 1ch;
}

.mini-btn-wrapper {
  position: absolute;
  bottom: 0;
  right: 0;
  margin: 4px;
}

.mini-btn {
  border-radius: 10px;
  padding: 4px 10px;
}

.row-btns {
  position: absolute;
  bottom: 0;
  left: 0;
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 4px;
}

.col-btns {
  position: absolute;
  display: flex;
  align-items: center;
  gap: 4px;

  top: -2.5em;
  right: 20px;
}

.col-btns svg {
  align-self: end;
}

.row-btns input,
.col-btns input {
  width: 4ch;
  height: 4ch;
  text-align: center;
  display: block;
}

.calc-popup-wrapper {
  position: absolute;
  bottom: calc(
    var(--footer-height) + 110px
  ); /* Some extra space for alpha popup*/
  right: 400px;
}

.calc {
  background-color: var(--color-jet);
  border: 1px solid var(--color-gray);
  border-bottom-left-radius: 6px;
  border-bottom-right-radius: 6px;
}

.calc-screen,
.calc-mini-screen {
  margin: 10px;
  line-height: 1.4;
  padding-right: 8px;
  justify-content: right;
  display: flex;
  color: var(--color-gray);
  height: 1em;
  overflow: hidden;
}

.calc-mini-screen {
  font-size: 1em;
}

.calc-screen {
  font-size: 1.6em;
}

.calc-btn-grid {
  display: grid;
  grid-template-rows: repeat(5, 40px);
  grid-template-columns: repeat(4, 60px);
  gap: 4px;
  margin: 10px;
}

.calc-btn {
  stroke: var(--color-blue);
}

.calc-btn:has(> svg):hover {
  stroke: white;
}

.calc-btn svg {
  stroke: inherit;
}

